--- a/src/pages/cloading.css
+++ b/src/pages/cloading.css
@@ -11,7 +11,8 @@ justify-content: center;
 align-items: center;
 height: 100vh;
 width: 100vw;
-background-color: #f3f4f6;
+/* background-color: #f3f4f6; */
+background-color: #ffe0b2;
 }
 
 .loading-circle {
