--- a/src/index.css
+++ b/src/index.css
@@ -496,3 +496,45 @@ h1 {
     margin-bottom: 15px;
   }
   
+  .shipping-confirmation-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    margin-top: 20px;
+  }
+  
+  .shipping-confirmation {
+    display: flex;
+    justify-content: left;
+    font-size: 15px;
+    gap: 10px;
+  }
+  
+  .shipping-checkbox {
+    width: 16px;
+    height: 16px;
+    accent-color: green;
+  }
+  
+  .shipping-buttons {
+    margin-left: auto;
+    display: flex;
+    gap: 12px;
+  }
+  
+  .back-btn,
+  .submit-btn {
+    background-color: #ffc107;
+    border: none;
+    padding: 8px 16px;
+    font-size: 15px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: 500;
+  }
+  
+  .back-btn {
+    background-color: #ffcc00;
+  }
+  
